Fixed issues with notes not centring the date correctly, broken colors pallette while doing that, fixed textOverFlowHandler issue with not preventing text overflow after editing a note

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ button {
 .notes-wrapper {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 1rem;
   background-color: #003cff;
 }
@@ -165,8 +165,8 @@ button {
 
 .note-footer {
   width: 100%;
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
+  display: flex;
+
   justify-content: space-between;
   align-items: center;
 }
